# django-samples

./: README.md  pyproject.toml
base/: settings.py  urls.py
core/: settings.py  urls.py
docs/: Colinha-Django.md
docs/Draw.io/: ConcreteViews.xml  ModelViewSet-Descritivo.xml  ModelViewSet.xml  ViewSet-Descritivo.xml  ViewSet.xml
samples/django_querys/: apps.py  decorators.py  models.py
samples/django_querys/management/commands/: create_db_items.py  prefetch_related_disabled.py  prefetch_related_enabled.py  prefetch_related_filtering_disabled.py  prefetch_related_filtering_enabled.py  select_related_disable.py  select_related_enabled.py  select_related_enabled_defer.py
samples/django_querys/migrations/: 0001_initial.py
samples/django_views/: apps.py
samples/rest_framework_api/: apps.py  models.py  serializers.py  urls.py
samples/rest_framework_api/migrations/: 0001_initial.py
samples/rest_framework_api/views/api_view/: class_based_views.py  function_based_views.py  serializer_crud.py
samples/rest_framework_api/views/generic_api_view/: concrete_view_classes.py  filtering_by_url_params.py  using_mixins_methods.py
samples/rest_framework_api/views/model_viewsets/: bultin_model_viewset.py  calling_mixings_methods.py  rewriting_mixings_methods.py
samples/rest_framework_api/views/viewsets/: viewsets.py
