[tool.poetry]
name = "django-samples"
version = "0.1.0"
description = "It's sample peaces of code in Django to easily remembers."
authors = ["Samuel Sampaio <samukasmk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
django-extensions = "^3.2.3"
django-filter = "^24.2"
djangorestframework = "^3.15.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pyflakes = "^3.2.0"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
pytest-flakes = "^4.0.5"
coverage = "^7.5.3"
ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
